# ondemand-obs

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
ondemand_obs/: __init__.py  config.py  instruments.py  logs.py  metrics.py  temporal.py  traces.py
tests/: test_configure.py
